--- a/Proyecto_SM/app/src/main/res/layout/activity_post.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_post.xml
@@ -171,7 +171,7 @@
         app:layout_constraintTop_toBottomOf="@+id/iv_image1_post" />
 
     <ImageView
-        android:id="@+id/imageView17"
+        android:id="@+id/iv_like_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="146dp"
@@ -189,7 +189,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView17"
+        app:layout_constraintStart_toEndOf="@+id/iv_like_post"
         app:layout_constraintTop_toBottomOf="@+id/iv_image2_post" />
 
     <View
@@ -202,7 +202,7 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView17" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_like_post" />
 
     <View
         android:id="@+id/divider2"
