--- a/Proyecto_SM/app/src/main/res/layout/activity_profile.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView36"
+        android:id="@+id/iv_main_profile"
         android:layout_width="44dp"
         android:layout_height="37dp"
         android:layout_marginStart="50dp"
@@ -16,19 +16,19 @@
         app:srcCompat="@drawable/ic_home_24" />
 
     <ImageView
-        android:id="@+id/imageView37"
+        android:id="@+id/iv_search_profile"
         android:layout_width="44dp"
         android:layout_height="38dp"
         android:layout_marginStart="90dp"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView36"
+        app:layout_constraintStart_toEndOf="@+id/iv_main_profile"
         app:layout_constraintTop_toBottomOf="@+id/divider7"
         app:srcCompat="@drawable/ic_search_24" />
 
     <ImageView
-        android:id="@+id/imageView38"
+        android:id="@+id/iv_profile_profile"
         android:layout_width="43dp"
         android:layout_height="38dp"
         android:layout_marginStart="86dp"
@@ -36,7 +36,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView37"
+        app:layout_constraintStart_toEndOf="@+id/iv_search_profile"
         app:srcCompat="@drawable/ic_account_24" />
 
     <View
@@ -49,7 +49,7 @@
         tools:layout_editor_absoluteX="1dp" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/iv_pfpic_profile"
         android:layout_width="118dp"
         android:layout_height="128dp"
         android:layout_marginStart="30dp"
@@ -59,7 +59,7 @@
         app:srcCompat="@drawable/ic_account_24" />
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/txt_name_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -67,11 +67,11 @@
         android:text="@string/name"
         android:textColor="#000000"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
+        app:layout_constraintStart_toEndOf="@+id/iv_pfpic_profile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/txt_email_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="18dp"
@@ -79,35 +79,35 @@
         android:text="@string/gmail"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintStart_toEndOf="@+id/iv_pfpic_profile"
+        app:layout_constraintTop_toBottomOf="@+id/txt_name_profile" />
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/iv_edit_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="105dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="31dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
+        app:layout_constraintStart_toEndOf="@+id/txt_name_profile"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_edit_24" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/iv_signout_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="31dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView16"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        app:layout_constraintStart_toEndOf="@+id/txt_email_profile"
+        app:layout_constraintTop_toBottomOf="@+id/iv_edit_profile"
         app:srcCompat="@drawable/ic_exit_24" />
 
     <TextView
-        android:id="@+id/textView17"
+        android:id="@+id/txt_posts_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
@@ -115,21 +115,21 @@
         android:text="@string/publicaciones"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_profile" />
 
     <TextView
-        android:id="@+id/textView18"
+        android:id="@+id/txt_replies_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="88dp"
         android:text="@string/respuestas"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/textView17"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintStart_toEndOf="@+id/txt_posts_profile"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_profile" />
 
     <TextView
-        android:id="@+id/textView19"
+        android:id="@+id/txt_favorites_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="67dp"
@@ -139,8 +139,8 @@
         android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+        app:layout_constraintStart_toEndOf="@+id/txt_replies_profile"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_profile" />
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
@@ -180,7 +180,7 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_posts_profile" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
