--- a/Proyecto_SM/app/src/main/res/layout/activity_login.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="306dp"
-        android:text="TextView"
+        android:text="@string/email"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginStart="53dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="250dp"
-        android:text="TextView"
+        android:text="@string/password"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
