--- a/Proyecto_SM/app/src/main/res/layout/activity_register.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_register.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="170dp"
-        android:text="TextView"
+        android:text="@string/direccion"
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
