--- a/Proyecto_SM/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="44dp"
         android:layout_height="37dp"
         android:layout_marginStart="50dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_home_24" />
@@ -21,23 +21,21 @@
         android:layout_width="44dp"
         android:layout_height="38dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="86dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/iv_profile_main"
         app:layout_constraintStart_toEndOf="@+id/iv_home_main"
-        app:layout_constraintTop_toBottomOf="@+id/divider5"
         app:srcCompat="@drawable/ic_search_24" />
 
     <ImageView
         android:id="@+id/iv_profile_main"
         android:layout_width="43dp"
         android:layout_height="38dp"
+        android:layout_marginStart="86dp"
         android:layout_marginEnd="54dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_search_main"
         app:srcCompat="@drawable/ic_account_24" />
 
     <View
@@ -46,7 +44,9 @@
         android:layout_height="1dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/iv_search_main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_content_main" />
@@ -77,8 +77,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_content_main"
-        android:layout_width="413dp"
-        android:layout_height="576dp"
+        android:layout_width="411dp"
+        android:layout_height="591dp"
         android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
