--- a/Proyecto_SM/app/src/main/res/layout/activity_post.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_post.xml
@@ -10,9 +10,11 @@
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="11dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/iv_profile_post"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_comment_post" />
@@ -23,7 +25,7 @@
         android:layout_height="38dp"
         android:layout_marginStart="86dp"
         android:layout_marginEnd="54dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_search_post"
@@ -34,7 +36,7 @@
         android:layout_width="44dp"
         android:layout_height="37dp"
         android:layout_marginStart="50dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_home_24" />
@@ -44,11 +46,9 @@
         android:layout_width="44dp"
         android:layout_height="38dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_home_post"
-        app:layout_constraintTop_toBottomOf="@+id/divider3"
         app:srcCompat="@drawable/ic_search_24" />
 
     <ImageView
