--- a/Proyecto_SM/app/src/main/res/layout/activity_search.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_search.xml
@@ -10,11 +10,9 @@
         android:layout_width="44dp"
         android:layout_height="37dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider4"
         app:srcCompat="@drawable/ic_home_24" />
 
     <ImageView
@@ -22,11 +20,9 @@
         android:layout_width="44dp"
         android:layout_height="38dp"
         android:layout_marginStart="90dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_home_search"
-        app:layout_constraintTop_toBottomOf="@+id/divider4"
         app:srcCompat="@drawable/ic_search_24" />
 
     <ImageView
@@ -34,13 +30,11 @@
         android:layout_width="43dp"
         android:layout_height="38dp"
         android:layout_marginStart="86dp"
-        android:layout_marginTop="7dp"
         android:layout_marginEnd="54dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/iv_search_search"
-        app:layout_constraintTop_toBottomOf="@+id/divider4"
         app:srcCompat="@drawable/ic_account_24" />
 
     <View
@@ -48,9 +42,10 @@
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/iv_search_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rv_results_search" />
@@ -101,7 +96,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_results_search"
         android:layout_width="409dp"
-        android:layout_height="595dp"
+        android:layout_height="613dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
