--- a/Proyecto_SM/app/src/main/res/layout/fragment_profile_responses.xml
+++ b/Proyecto_SM/app/src/main/res/layout/fragment_profile_responses.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileReplies">
+    tools:context=".fragments.ProfileReplies">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -21,9 +21,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Replies" />
 </FrameLayout>
