--- a/Proyecto_SM/app/src/main/res/layout/fragment_profile_posts.xml
+++ b/Proyecto_SM/app/src/main/res/layout/fragment_profile_posts.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfilePosts">
+    tools:context=".fragments.ProfilePosts">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -19,9 +19,4 @@
         app:layout_constraintTop_toBottomOf="@+id/divider8"
         tools:listitem="@layout/item_post" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Posts" />
 </FrameLayout>
