--- a/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
+++ b/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
@@ -76,7 +76,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_name_comment"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_settings_24" />
+                app:srcCompat="@drawable/ic_delete_24" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
