--- a/Proyecto_SM/app/src/main/res/layout/activity_profile.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
+
 
     <ImageView
         android:id="@+id/iv_main_profile"
@@ -49,7 +51,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
+
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_pfpic_profile"
         android:layout_width="118dp"
         android:layout_height="128dp"
@@ -57,7 +60,9 @@
         android:layout_marginTop="36dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/circular"
         app:srcCompat="@drawable/ic_account_24" />
+
 
     <TextView
         android:id="@+id/txt_name_profile"
