--- a/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
+++ b/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_photo_comment"
                 android:layout_width="76dp"
                 android:layout_height="0dp"
@@ -29,6 +29,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/circular"
                 app:srcCompat="@drawable/ic_account_24" />
 
             <TextView
