--- a/Proyecto_SM/app/src/main/res/layout/activity_main.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_main.xml
@@ -53,15 +53,15 @@
 
     <ImageView
         android:id="@+id/iv_pfp_main"
-        android:layout_width="62dp"
-        android:layout_height="64dp"
-        android:layout_marginStart="174dp"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="175dp"
+        android:layout_marginEnd="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_account_24" />
+        app:srcCompat="@drawable/Logo" />
 
     <View
         android:id="@+id/divider6"
