--- a/Proyecto_SM/app/src/main/res/layout/activity_post.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_post.xml
@@ -5,52 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="409dp"
-        android:layout_height="1dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/iv_profile_post"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_comment_post" />
-
-    <ImageView
-        android:id="@+id/iv_profile_post"
-        android:layout_width="43dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="86dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_search_post"
-        app:srcCompat="@drawable/ic_account_24" />
-
-    <ImageView
-        android:id="@+id/iv_home_post"
-        android:layout_width="44dp"
-        android:layout_height="37dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_home_24" />
-
-    <ImageView
-        android:id="@+id/iv_search_post"
-        android:layout_width="44dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_home_post"
-        app:srcCompat="@drawable/ic_search_24" />
-
     <ImageView
         android:id="@+id/iv_image2_post"
         android:layout_width="149dp"
@@ -88,7 +42,7 @@
         app:layout_constraintStart_toEndOf="@+id/iv_back_post"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_pfp_post"
         android:layout_width="78dp"
         android:layout_height="86dp"
@@ -96,6 +50,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider13"
+        app:shapeAppearanceOverlay="@style/circular"
         app:srcCompat="@drawable/ic_account_24" />
 
     <TextView
@@ -199,12 +154,14 @@
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="1dp"
         android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/et_comment_post"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_comments_post" />
+        app:layout_constraintTop_toBottomOf="@+id/rv_comments_post"
+        app:layout_constraintVertical_bias="0.822" />
 
     <TextView
         android:id="@+id/tv_date_post"
@@ -220,12 +177,13 @@
         android:id="@+id/et_comment_post"
         android:layout_width="342dp"
         android:layout_height="48dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="1dp"
         android:ems="10"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/iv_send_post"
@@ -233,9 +191,11 @@
         android:layout_height="47dp"
         android:layout_marginStart="6dp"
         android:layout_marginEnd="10dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/et_comment_post"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
         app:srcCompat="@drawable/ic_next_24" />
 
     <View
@@ -253,8 +213,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_comments_post"
         android:layout_width="412dp"
-        android:layout_height="167dp"
-        android:layout_marginStart="1dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider"
