--- a/Proyecto_SM/app/src/main/res/layout/activity_publish.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_publish.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_check_24" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_pfpic_publish"
         android:layout_width="57dp"
         android:layout_height="60dp"
@@ -48,6 +48,7 @@
         android:layout_marginTop="45dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider11"
+        app:shapeAppearanceOverlay="@style/circular"
         app:srcCompat="@drawable/ic_account_24" />
 
     <ImageView
@@ -112,7 +113,8 @@
         android:layout_height="1dp"
         android:layout_marginTop="9dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/iv_back_publish"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_back_publish" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
