--- a/Proyecto_SM/app/src/main/res/layout/activity_register.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_register.xml
@@ -5,16 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_image_register"
         android:layout_width="119dp"
         android:layout_height="104dp"
         android:layout_marginStart="146dp"
-        android:layout_marginTop="49dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="146dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/circular"
         app:srcCompat="@drawable/ic_person_24" />
 
     <TextView
