--- a/Proyecto_SM/app/src/main/res/layout/activity_search.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_search.xml
@@ -55,17 +55,17 @@
         android:layout_width="47dp"
         android:layout_height="52dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_account_24" />
+        app:srcCompat="@drawable/Logo" />
 
     <EditText
         android:id="@+id/et_searchbox_search"
         android:layout_width="280dp"
         android:layout_height="48dp"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/iv_searchicon_search"
