--- a/Proyecto_SM/app/src/main/res/layout/item_post.xml
+++ b/Proyecto_SM/app/src/main/res/layout/item_post.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintStart_toEndOf="@+id/iv_pfp_itempost"
                 app:layout_constraintTop_toBottomOf="@+id/txtTitle_Post" />
 
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/iv_pfp_itempost"
                 android:layout_width="63dp"
                 android:layout_height="58dp"
@@ -44,6 +44,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.266"
+                app:shapeAppearanceOverlay="@style/circular"
                 tools:srcCompat="@drawable/ic_account_24" />
 
             <TextView
