--- a/Proyecto_SM/app/src/main/res/layout/activity_search.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_search.xml
@@ -58,7 +58,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Logo" />
+        app:srcCompat="@drawable/logo" />
 
     <EditText
         android:id="@+id/et_searchbox_search"
