--- a/Proyecto_SM/app/src/main/res/layout/activity_post.xml
+++ b/Proyecto_SM/app/src/main/res/layout/activity_post.xml
@@ -58,12 +58,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="7dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="176dp"
         android:text="@string/name"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/iv_settings_post"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/iv_pfp_post"
         app:layout_constraintTop_toBottomOf="@+id/divider13" />
 
@@ -86,6 +87,7 @@
         android:text="@string/titulop"
         android:textColor="#000000"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_pfp_post" />
