--- a/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
+++ b/Proyecto_SM/app/src/main/res/layout/item_comment_2.xml
@@ -24,11 +24,12 @@
                 android:layout_width="76dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="4dp"
-                android:layout_marginTop="13dp"
-                android:layout_marginBottom="13dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 app:shapeAppearanceOverlay="@style/circular"
                 app:srcCompat="@drawable/ic_account_24" />
 
@@ -41,6 +42,7 @@
                 android:layout_marginEnd="17dp"
                 android:text="TextView"
                 android:textColor="#000000"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/iv_photo_comment"
